Adds support for RoleManager.Roles. Ups version to 2.0.4

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ PublishProfiles/
 # Misc. Files
 *.ncrunchsolution
 .awspublish-cf-cdn-dev
+_PUBLISHING_TO_NUGET.md
 
 # User-specific files
 *.suo
