--- a/tests/identity.dynamo.tests/App.config
+++ b/tests/identity.dynamo.tests/App.config
@@ -1,17 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="elcaminoIdentityDynamoDBConfiguration" type="ElCamino.AspNet.Identity.Dynamo.Configuration.IdentityConfigurationSection,ElCamino.AspNet.Identity.Dynamo " />
+    <section name="elcaminoIdentityDynamoDBConfiguration" type="ElCamino.AspNet.Identity.Dynamo.Configuration.IdentityConfigurationSection,ElCamino.AspNet.Identity.Dynamo.v2" />
   </configSections>
+
   <elcaminoIdentityDynamoDBConfiguration 
     tablePrefix="Test" 
     serviceURL="http://localhost:8000" />
+
 
   <connectionStrings>
     <!-- Dynamo connection information-->
     <!-- Deprecated ElCamino.AspNet.Identity.Dynamo settings-->
     <add name="DynamoConnectionString" connectionString="http://localhost:8000" />
   </connectionStrings>
+  
   <appSettings>
     <!--AWS AccessKeys are not needed if you are using the DynamoDB Local Emulator-->
     <!--Uncomment the AccessKeys section when you connect to a live DynamoDB instance in AWS-->
