--- a/tests/identity.dynamo.tests/packages.config
+++ b/tests/identity.dynamo.tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK.Core" version="3.1.4.5" targetFramework="net451" />
-  <package id="AWSSDK.DynamoDBv2" version="3.1.1.4" targetFramework="net451" />
+  <package id="AWSSDK.Core" version="3.2.8-rc" targetFramework="net451" />
+  <package id="AWSSDK.DynamoDBv2" version="3.2.8-rc" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
 </packages>
