--- a/src/identity.dynamo/ElCamino.AspNet.Identity.Dynamo.csproj
+++ b/src/identity.dynamo/ElCamino.AspNet.Identity.Dynamo.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ElCamino.AspNet.Identity.Dynamo</RootNamespace>
     <AssemblyName>ElCamino.AspNet.Identity.Dynamo.v2</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
@@ -56,22 +56,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AWSSDK.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\AWSSDK.Core.3.2.8-rc\lib\net45\AWSSDK.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="AWSSDK.DynamoDBv2, Version=3.2.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\AWSSDK.DynamoDBv2.3.2.8-rc\lib\net45\AWSSDK.DynamoDBv2.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -84,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\IdentityConfigurationSection.cs" />
+    <Compile Include="Configuration\IdentityDynamoOptions.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Helpers\BatchOperationHelper.cs" />
     <Compile Include="Helpers\KeyHelper.cs" />
@@ -103,7 +88,9 @@
     <Compile Include="Model\IGenerateKeys.cs" />
     <Compile Include="Model\IUserKeys.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoleStore.Core.partial.cs" />
     <Compile Include="RoleStore.cs" />
+    <Compile Include="UserStore.Core.partial.cs" />
     <Compile Include="UserStore.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -118,8 +105,8 @@
     <Content Include="IdentityDynamoDb.pfx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Include="project.json" />
     <None Include="NoPassword.snk" />
+    <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="IdentityResources.resx">
