--- a/src/ElCamino.AspNet.Identity.TestAppsettings/project.json
+++ b/src/ElCamino.AspNet.Identity.TestAppsettings/project.json
@@ -8,10 +8,7 @@
     "Microsoft.Extensions.Configuration": "1.1.0",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
     "Microsoft.Extensions.Configuration.Json": "1.1.0",
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.1"
-    }
+    "Microsoft.NETCore.App": "1.1.0"
   },
 
   "frameworks": {
