Some tests around KeyHelper

--- a/tests/ElCamino.AspNetCore.Identity.UnitTests/ElCamino.AspNetCore.Identity.UnitTests.csproj
+++ b/tests/ElCamino.AspNetCore.Identity.UnitTests/ElCamino.AspNetCore.Identity.UnitTests.csproj
@@ -47,6 +47,9 @@
       <HintPath>..\..\packages\FakeItEasy.2.3.1\lib\net40\FakeItEasy.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNetCore.Identity">
+      <HintPath>..\..\..\..\Users\paul\.nuget\packages\Microsoft.AspNetCore.Identity\1.1.0\lib\netstandard1.3\Microsoft.AspNetCore.Identity.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -68,6 +71,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Configuration\IdentityDynamoOptionsTests.cs" />
+    <Compile Include="Helpers\KeyHelperTests.cs" />
     <Compile Include="IdentityCloudContextTests.cs" />
     <Compile Include="IdentityUserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
