--- a/tests/ElCamino.AspNetcore.Identity.Dynamo.IntegrationTests/ElCamino.AspNetcore.Identity.Dynamo.IntegrationTests.csproj
+++ b/tests/ElCamino.AspNetcore.Identity.Dynamo.IntegrationTests/ElCamino.AspNetcore.Identity.Dynamo.IntegrationTests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{803030D9-4E95-4C36-8813-A35194D805EC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ElCamino.AspNet.Identity.Dynamo.Tests</RootNamespace>
-    <AssemblyName>ElCamino.AspNet.Identity.Dynamo.v2.Tests</AssemblyName>
+    <RootNamespace>ElCamino.AspNetCore.Identity.Dynamo.IntegrationTests</RootNamespace>
+    <AssemblyName>ElCamino.AspNetCore.Identity.Dynamo.IntegrationTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -286,11 +286,13 @@
   <ItemGroup>
     <Compile Include="ExceptionHelper.cs" />
     <Compile Include="ModelTests\IdentityCloudContextFake.cs" />
-    <Compile Include="ModelTests\IdentityUserTests.cs" />
     <Compile Include="ModelTests\IdentityCloudContextTests.cs" />
-    <Compile Include="RoleStoreTests.cs" />
+    <Compile Include="ModelTests\IdentityUserTests.cs" />
+    <Compile Include="ModelTests\LegacyIdentityCloudContextTests.cs" />
+    <Compile Include="LegacyRoleStoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="RoleStoreTests.cs" />
     <Compile Include="UserStoreTests.cs" />
     <Compile Include="UserStoreTests.Properties.partial.cs" />
   </ItemGroup>
